--- a/GYM.BlazorApp/Pages/Orders/Orders.razor
+++ b/GYM.BlazorApp/Pages/Orders/Orders.razor
@@ -8,7 +8,7 @@
     <div class="col-md-6">
         <a href="/order/add" class="btn btn-primary" role="button">
             <i class="oi-plus"></i>
-            Add User
+            Add Order
         </a>
     </div>
 
