--- a/GYM.BlazorApp/Shared/NavMenu.razor
+++ b/GYM.BlazorApp/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="visitors">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Visitors
+            </NavLink>
+        </div>
     </nav>
 </div>
 
