--- a/GYM.BlazorApp/Pages/Orders/AddOrder.razor
+++ b/GYM.BlazorApp/Pages/Orders/AddOrder.razor
@@ -2,6 +2,8 @@
 @page "/order/add"
 @page "/order/edit/{orderId:int}"
 
+@attribute [Authorize]
+
 @inject IGenericService<OrderViewModel> OrderService
 @inject NavigationManager NavigationManager
 
