--- a/GYM.BlazorApp/Pages/Orders/DeleteOrder.razor
+++ b/GYM.BlazorApp/Pages/Orders/DeleteOrder.razor
@@ -1,5 +1,7 @@
 ﻿@page "/order/delete/{orderId:int}"
 
+@attribute [Authorize]
+
 @inject NavigationManager NavigationManager
 @inject IGenericService<OrderViewModel> OrderService
 <br />
