--- a/GYM.BlazorApp/Pages/Index.razor
+++ b/GYM.BlazorApp/Pages/Index.razor
@@ -4,6 +4,8 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+    Welcome to your new app.
+
+<p> Not authorized information</p>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
