--- a/GYM.BlazorApp/Pages/Visitors/DeleteVisitor.razor
+++ b/GYM.BlazorApp/Pages/Visitors/DeleteVisitor.razor
@@ -1,5 +1,7 @@
 ﻿@page "/visitor/delete/{visitorId:int}"
 
+@attribute [Authorize]
+
 @inject NavigationManager NavigationManager
 @inject IGenericService<VisitorViewModel> VisitorsService
 <h2>Delete User</h2>
